<resources>
    <string name="app_name">TimeWise</string>

    <!--Main Activity content description-->
    <string name="cd_search">Search</string>
    <string name="cd_edit">Edit</string>
    <string name="cd_delete">Delete</string>
    <string name="cd_back">Back</string>
    <string name="cd_add_label">AddLabel</string>
    <string name="cd_today">Today</string>
    <string name="cd_week">Week</string>
    <string name="cd_later">Later</string>
    <string name="cd_expired">Expired</string>
    <string name="cd_image">Image</string>

    <!--Main Activity text view-->
    <string name="today">Para hoy</string>
    <string name="week">Esta semana</string>
    <string name="later">Más tarde</string>
    <string name="expired">Tareas expiradas</string>

    <!--Task Activity text view-->
    <string name="completed">Completados %1$s</string>
    <string name="hintNameTask">Nombre tarea</string>
    <string name="hintExpiredTask">Vencimiento</string>
    <string name="hintReminderTask">Recordatorio</string>
    <string name="hintDetailsTask">Notas</string>
    <string name="creationDate">Creado el %1$s</string>
    <string name="finishedDate">Finalizado el %1$s</string>

    <!--Dialog label-->
    <string name="dialogLabelTitle">Crea una etiqueta</string>
    <string name="dialogLabelHint">Añade un nombre</string>
    <string name="dialogLabelCancel">CANCELAR</string>
    <string name="dialogLabelAdd">CREAR ETIQUETA</string>
    <string name="dialogLabelRemoveImage">Quitar imagen</string>

    <!--Dialog delete label-->
    <string name="dialogDeleteTitle">¿Estás seguro?</string>
    <string name="dialogDeleteListMessage">La lista se eliminará permanentemente</string>
    <string name="dialogDeleteTaskMessage">La tarea se eliminará permanentemente</string>
    <string name="dialogDeleteYes">CANCELAR</string>
    <string name="dialogDeleteNo">ELIMINAR</string>

    <!--Dialog add task-->
    <string name="dialogAddTaskNameHint">Agrega una tarea</string>

    <!--Items menu tasks-->
    <string name="itemEditLabel">Modificar etiqueta</string>
    <string name="itemDeleteLabel">Eliminar etiqueta</string>

    <!--Items menu tasks-->
    <string name="menuReminderToday">Más tarde hoy</string>
    <string name="menuReminderTomorrow">Para mañana</string>
    <string name="menuReminderLater">Próxima semana</string>
    <string name="menuReminderPickDate">Elegir una fecha y hora</string>
    <string name="menuExpirationToday">Para hoy</string>
    <string name="menuExpirationTomorrow">Para mañana</string>
    <string name="menuExpirationLater">Próxima semana</string>
    <string name="menuExpirationPickDate">Elegir una fecha</string>

    <!--Text Stats-->
    <string name="TitleLabel">Sin etiquetas</string>
    <string name="SubtitleLabel">Empieza a etiquetar temas que te gusten</string>
    <string name="TitleSearch">No se han encontrado resultados</string>
    <string name="SubtitleSearch">Intente ajustar su búsqueda para encontrar lo que busca</string>
    <string name="TitleFilter">Tu agenda está vacía</string>
    <string name="SubtitleFilter">No hay tareas programadas</string>

    <!--Notification-->
    <string name="TitleReminder">Aviso</string>
    <string name="MessageReminder">Recordatorio de la tarea: %1$s</string>
</resources>